--- a/index.html
+++ b/index.html
@@ -1,31 +1,116 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <title>Cheat-sheet CSS</title>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="fr"> <!--<![endif]-->
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title>Cheat sheet CSS</title>
+        <meta name="description" content="css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
     <!--stylesheets-->
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <link rel="stylesheet" href="css/foundation.min.css" type="text/css">
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="css/material.min.css" type="text/css">
 
+      <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 
     <!-- mediaqueries -->
     <meta name="viewport" content="width=device-width">
 
     <!-- fonts -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
 
     <!-- favicon -->
-    <link rel="icon" type="image/png" href="img/file.png">
-    <!--[if IE]><link rel="shortcut icon" type="image/x-icon" href="img/img/file.ico" /><![endif]-->
+    <link rel="icon" type="image/png" href="img/favicss3.png">
+    <!--[if IE]><link rel="shortcut icon" type="image/x-icon" href="img/img/favicss3.ico" /><![endif]-->
     <!--<meta name="viewport" content="width=device-width" />-->
 
 
 </head>
 <body>
+  <!--[if lt IE 8]>
+      <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+  <![endif]-->
+  <div id="home">
+    <div class="container-fluid">
 
+      <!-- NAVIGATION -->
+  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Cheat-sheet CSS</a>
+      </div>
+      <div id="navbar" class="navbar-collapse navbar-right collapse">
+        <ul class="list-unstyled nav navbar-nav">
+          <li><a href="#synthaxe" class="btn btn-default" role="button">Synthaxe</a></li>
+          <li><a href="#style" class="btn btn-default" role="button">Style</a></li>
+          <li><a href="#position" class="btn btn-default" role="button">Positions</a></li>
+          <li><a href="#about" class="btn btn-default" role="button">About</a></li>
+          <li><a href="contact" class="btn btn-default" role="button">Contact</a></li>
+        </ul>
+      </div><!--/.navbar-collapse -->
+    </div>
+  </nav>
 
+<div class="row">
+  <div class="col-sm-8 col-sm-offset-2 col-md-6 col-sm-offset-3 col-lg-4 col-lg-offset-4">
+
+      <img id="logo" src="img/logoCSS3.png" alt="logo CSS 3" />
+  </div>
+</div>
+    </div>
+  </div>
+
+  <div class="container">
+    <!-- Example row of columns -->
+    <div class="row">
+      <div class="col-md-4">
+        <h2>Heading</h2>
+        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+        <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+      </div>
+      <div class="col-md-4">
+        <h2>Heading</h2>
+        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+        <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+     </div>
+      <div class="col-md-4">
+        <h2>Heading</h2>
+        <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+        <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+      </div>
+    </div>
+
+    <hr>
+
+    <footer>
+      <p>&copy; Company 2015</p>
+    </footer>
+  </div> <!-- /container -->
+
+  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+  <script>
+      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+      e.src='//www.google-analytics.com/analytics.js';
+      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+      ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+  </script>
+  <!-- scrpts#2 -->
+  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+  <script src="js/vendor/bootstrap.min.js"></script>
+  <script src="js/material.min.js"></script>
 
 </body>
 </html>
