W3C validated, add comments, clean html and css file

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
@@ -42,7 +43,7 @@
     <div class="container-fluid">
 
       <!-- NAVIGATION -->
-      <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <nav class="navbar navbar-inverse navbar-fixed-top" >
         <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -111,24 +112,23 @@
           <li>
             <code>...</code>
           </li>
-        </li>
-        <li>
-          <code>balise1, balise2, ... {...</code> applique le MÊME style aux balises 1 2 ...</li>
-        <li>
-          <code>balise1 balise2 {...</code> applique le style sur les balise2 DANS les balises1.</li>
-        <li>
-          <code>balise1 + balise2 {...</code> applique le style sur les balise2 qui SUIVENT balise1 (pas si plusieurs balise2 a la suite).</li>
-        <li>
-          <code>balise[attribut] {...</code> applique le style aux balises balises qui contiennent l'attribut attribut. {...
-        </li>
-        <li>
-          <code>balise:hover {...</code> change le style lors du survole à la souris de la balise.</li>
-        <li>
-          <code>balise:focus {...</code> change le style lors du survole à la souris de la balise.</li>
-        <li>
-          <code>a:active {...</code> change le style quand je clique dessus.</li>
-        <li>
-          <code>a:visited {...</code> change le style quand j'ai deja visitéle site.</li>
+          <li>
+            <code>balise1, balise2, ... {...</code> applique le MÊME style aux balises 1 2 ...</li>
+          <li>
+            <code>balise1 balise2 {...</code> applique le style sur les balise2 DANS les balises1.</li>
+          <li>
+            <code>balise1 + balise2 {...</code> applique le style sur les balise2 qui SUIVENT balise1 (pas si plusieurs balise2 a la suite).</li>
+          <li>
+            <code>balise[attribut] {...</code> applique le style aux balises balises qui contiennent l'attribut attribut. {...
+          </li>
+          <li>
+            <code>balise:hover {...</code> change le style lors du survole à la souris de la balise.</li>
+          <li>
+            <code>balise:focus {...</code> change le style lors du survole à la souris de la balise.</li>
+          <li>
+            <code>a:active {...</code> change le style quand je clique dessus.</li>
+          <li>
+            <code>a:visited {...</code> change le style quand j'ai deja visitéle site.</li>
         </ul>
         <h2><i class="fa fa-image fa-2x"></i>Images et marges</h2>
         <ul>
@@ -156,7 +156,7 @@
       </section>
       <!--    SECTION SYNTHAXE END      -->
 
-      <section  class="col-lg-10 col-lg-offset-1 col-md-offset-1 col-md-10 col-sm-12">
+      <section class="col-lg-10 col-lg-offset-1 col-md-offset-1 col-md-10 col-sm-12">
         <h2 id="style"><i class="fa fa-text-height fa-2x"></i>Propriétés de style</h2>
         <ul>
           <li>
@@ -215,7 +215,7 @@
       </section>
       <!--    SECTION STYLE END      -->
 
-      <section  class="col-lg-10 col-lg-offset-1 col-md-offset-1 col-md-10 col-sm-12">
+      <section class="col-lg-10 col-lg-offset-1 col-md-offset-1 col-md-10 col-sm-12">
         <h2 id="position"><i class="fa fa-th fa-2x"></i>Positionnement</h2>
         <ul>
           <li>
@@ -265,10 +265,10 @@
           <li><a class="btn btn-default" href="#" role="button"><i class="fa fa-facebook-official fa-lg"></i></a></li>
           <li><a class="btn btn-default" href="#" role="button"><i class="fa fa-twitter-square fa-lg"></i></a></li>
         </ul>
-      </div>
-    </section>
-    <!--    CONTACT END      -->
-
+      </section>
+      <!--    CONTACT END      -->
+    </div>
+    <!-- END CONTAINER -->
     <hr>
 
     <footer class="text-center">
