--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 
   <!--stylesheets-->
-  <link rel="stylesheet" href="css/style.css" type="text/css">
-  <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
   <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
+  <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+  <link rel="stylesheet" href="css/style.css" type="text/css">
 
   <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 
@@ -54,8 +54,8 @@
             </button>
             <a class="navbar-brand" href="#">Cheat-sheet CSS</a>
           </div>
-          <div id="navbar" class="navbar-collapse navbar-right collapse">
-            <ul class="list-unstyled nav navbar-nav">
+          <div id="navbar" class="navbar-collapse collapse">
+            <ul class="list-unstyled nav navbar-nav  navbar-right">
               <li><a href="#synthaxe" class="btn btn-default" role="button">Synthaxe</a></li>
               <li><a href="#style" class="btn btn-default" role="button">Style</a></li>
               <li><a href="#position" class="btn btn-default" role="button">Positions</a></li>
@@ -277,6 +277,15 @@
   </div>
   <!-- /container -->
 
+
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+ <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+
+
+  <!-- scrpts#2 -->
+
+  <script src="js/vendor/bootstrap.min.js"></script>
+
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
   <script>
     (function(b, o, i, l, e, r) {
@@ -294,10 +303,7 @@
     ga('create', 'UA-XXXXX-X', 'auto');
     ga('send', 'pageview');
   </script>
-  <!-- scrpts#2 -->
-  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-  <script src="js/vendor/bootstrap.min.js"></script>
-  <script src="js/material.min.js"></script>
+
 
 </body>
 
